--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_URL=http://makine-vds-ip:3001/api
+NEXT_PUBLIC_API_URL=https://noramu.com.tr/api
 
 # ===== SEO AYARLARI =====
 NEXT_PUBLIC_SITE_NAME=Noramu
